--- a/public/sass/reusable/_components.scss
+++ b/public/sass/reusable/_components.scss
@@ -84,6 +84,12 @@
   margin-right: 11px ;
   margin-left: 20px ;
 }
+@media (max-width: 767px)  {
+  .dropdownLoginHr{
+    width: 0px;
+    height: 0px;
+  }
+}
 
 .ModalTop{
   border-bottom: none;
