--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -1,4 +1,4 @@
-//for page home component carousel
+ //for page home component carousel
 .carouselHome{
   width: 100%;
   height: 25rem;
@@ -160,4 +160,8 @@
     padding-left: 2rem;
     margin: 0rem !important;
   }
+}
+
+.rowz {
+  margin: 0rem !important;
 }
