--- a/public/sass/reusable/_components.scss
+++ b/public/sass/reusable/_components.scss
@@ -84,6 +84,12 @@
   margin-right: 11px ;
   margin-left: 20px ;
 }
+@media (max-width: 767px)  {
+  .dropdownLoginHr{
+    width: 0px;
+    height: 0px;
+  }
+}
 
 .ModalTop{
   border-bottom: none;
@@ -96,8 +102,14 @@
   margin-top:10%;
   border-radius: 0;
   border: 5px solid var(--white);
-
 }
+
+@media (min-width: 576px) {
+  .Modalz{
+    max-width:none
+  }
+}
+
 
 .inputz{
   border: transparent;
@@ -108,10 +120,33 @@
   color: var(--color-yellow-1);
   outline: none;
   &:focus{
-    background-color: none;
+    border: transparent;
+    border-bottom: 2px solid var(--color-yellow-1);
+    background: transparent;
+    font-family: Raleway;
+    font-style: italic;
+    color: var(--color-yellow-1);
   }
   &:hover{
-    background: transparent;
     border: transparent;
+    border-bottom: 2px solid var(--color-yellow-1);
+    background: transparent;
+    font-family: Raleway;
+    font-style: italic;
+    color: var(--color-yellow-1);
+  }
+  &::placeholder{
+    background: transparent;
+    font-family: Raleway;
+    font-style: italic;
+    color: var(--color-yellow-1);
+  }
+  &:active{
+    border: transparent;
+    border-bottom: 2px solid var(--color-yellow-1);
+    background: transparent;
+    font-family: Raleway;
+    font-style: italic;
+    color: var(--color-yellow-1);
   }
 }
