--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -7,7 +7,7 @@
 
   &__Title1{
     font-family: Raleway;
-    font-size: 14px;
+    // font-size: 14px;
     font-weight: 500;
     line-height: 16px;
     text-align: center;
@@ -17,7 +17,7 @@
 
   &__Title2{
     font-family: Raleway;
-    font-size: 20px;
+    // font-size: 20px;
     font-weight: 900;
     line-height: 24px;
     text-align: center;
