--- a/public/sass/reusable/_components.scss
+++ b/public/sass/reusable/_components.scss
@@ -98,17 +98,27 @@
 }
 
 .Modalz{
-  width: 750px;
   margin-top:10%;
   border-radius: 0;
   border: 5px solid var(--white);
 }
 
-@media (min-width: 576px) {
+@media (min-width: 275px ) and (max-width:500px ) {
   .Modalz{
-    max-width:none
+    margin-top:20%;
+    font-size: 14px;
+    margin-left: 43px;
+    width: 80%;
+    max-width: 100%;
   }
 }
+// @media (max-width: 362px ) {
+//   .Modalz{
+//     font-size: 14px;
+//     margin-left: 37px;
+//     max-width:343px
+//   }
+// }
 
 
 .inputz{
