--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -74,6 +74,7 @@
 }
 
 .ButtonLogin{
+  cursor: default;
   height: 40px;
   border-radius: 10px;
   background-color: #FFCD05;
@@ -121,6 +122,7 @@
 
 
 .ButtonSignup{
+  cursor: default;
   height: 40px;
   border-radius: 10px;
   background-color: #FFCD05;
