--- a/public/sass/reusable/_components.scss
+++ b/public/sass/reusable/_components.scss
@@ -66,7 +66,7 @@
 .dropdownLoginHr{
   border: none ;
   border-left: 1px solid hsla(200, 10%, 0%,100);
-  height: 39px ;
+  height: 40px ;
   width: 1px ;
   margin-top: 0 ;
   margin-bottom: 0 ;
@@ -95,6 +95,9 @@
   border-bottom: none;
   border-radius: 0;
   background-color: var(--color-grey-5);
+  span{
+    color: #FFCD05;
+  }
 }
 
 .Modalz{
@@ -128,7 +131,7 @@
   font-family: Raleway;
   font-style: italic;
   color: var(--color-yellow-1);
-  outline: none;
+  box-shadow: none !important;
   &:focus{
     border: transparent;
     border-bottom: 2px solid var(--color-yellow-1);
