--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -1,3 +1,4 @@
+//Header
 .HeaderTop {
     background-color: #3E3E3E;
     border-bottom: 4px solid #FFCD05;
@@ -6,44 +7,13 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      align-items: center !important;
-      margin: 0rem !important;
-      padding: 0rem !important;
-    }
-    &__Button{
-      padding: 5px !important;
-      margin: 20px !important;
-      justify-content: center;
-      &__img{
-        width: 25px;
-        height: 25px;
-      }
-    }
-
-    &__List {
-      color: var(--color-primary-2) !important;
-      padding-top: 20px !important;
-
-      &:hover {
-        color: white !important;
-        background-color: #e5b721;
-        height: 100%;
-        width: 100%;
-      }
-    }
-    &__ContactUs{
-      color: var(--color-primary-2) !important;
-      margin-right: 20px;
-      padding-top: 20px !important;
-      padding-bottom: 20px !important;
-      &:hover {
-        color: white !important;
-        background-color: #e5b721;
-        height: 100%;
-      }
+      align-items: center;
+      margin: 0rem;
+      padding: 0rem;
     }
 }
 
+//Botton for top up aladinkey
 .ButtonTopUP{
   height: 40px;
   width: 200px;
@@ -56,7 +26,7 @@
   font-weight: 600;
   line-height: 21px;
   text-align: center;
-  margin-right: 20px !important;
+  margin-right: 20px;
   &__label{
     font-size: 18px;
     &__italic{
@@ -66,6 +36,7 @@
   }
 }
 
+//media query resposive header for button top up
 @media (max-width: 767px) {
   .ButtonTopUP{
     border: transparent;
@@ -73,7 +44,8 @@
   }
 }
 
-.ButtonLogin{
+//Botton for user login
+.ButtonLoginSignup{
   height: 40px;
   border-radius: 10px;
   background-color: #FFCD05;
@@ -92,18 +64,12 @@
     height: 25px;
   }
   &__iconProfile{
-    width: 15.219px !important;
-    height: 25px !important;
-  }
-
-  &__Profile{
-    padding-top: 20px;
-  }
-  &__P{
-    padding-top: 20px;
+    width: 15px;
+    height: 25px;
   }
 }
 
+//media query resposive header for button login
 @media (max-width: 767px)  {
   .ButtonLogin {
     background-color: transparent;
@@ -112,6 +78,7 @@
   }
 }
 
+//media query resposive header for icon inside button login
 @media (max-width: 767px)  {
   .ButtonLogin__iconLogin{
     width: 0px;
@@ -119,46 +86,7 @@
   }
 }
 
-
-.ButtonSignup{
-  height: 40px;
-  border-radius: 10px;
-  background-color: #FFCD05;
-  display: flex;
-  align-items: center;
-
-  color: #3E3E3E;
-  font-family: Raleway;
-  font-size: 22px;
-  font-weight: 800;
-  letter-spacing: 1px;
-  margin: 10px;
-
-  &__iconLogin{
-    width: 17px;
-    height: 25px;
-  }
-
-  &__P{
-    padding-top: 20px;
-  }
-}
-
-@media (max-width: 767px)  {
-  .ButtonSignup__iconLogin{
-    width: 0px;
-    height: 0px;
-  }
-}
-
-@media (max-width: 767px)  {
-  .ButtonSignup {
-    background-color: transparent;
-    color: var(--color-yellow-1);
-    margin-left: 60px;
-  }
-}
-
+//Botton for user see after login
 .ButtonProfile{
   height: 40px;
   border-radius: 10px;
@@ -179,18 +107,12 @@
     height: 25px;
   }
   &__iconProfile{
-    width: 15.219px !important;
-    height: 25px !important;
-  }
-
-  &__Profile{
-    padding-top: 20px;
-  }
-  &__P{
-    padding-top: 20px;
+    width: 15.219px;
+    height: 25px;
   }
 }
 
+//media query resposive header for button login
 @media (max-width: 767px)  {
   .ButtonLogin {
     background-color: transparent;
@@ -199,6 +121,7 @@
   }
 }
 
+//media query resposive header for icon inside button login
 @media (max-width: 767px)  {
   .ButtonLogin__iconLogin{
     width: 0px;
@@ -206,6 +129,7 @@
   }
 }
 
-.navbartogel{
+//Button for navgar toggle
+.IconBurger{
   background-color: var(--color-yellow-1);
 }
