--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,33 +44,9 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: center !important;
-    margin: 0rem !important;
-    padding: 0rem !important; }
-  .HeaderTop__Button {
-    padding: 5px !important;
-    margin: 20px !important;
-    justify-content: center; }
-    .HeaderTop__Button__img {
-      width: 25px;
-      height: 25px; }
-  .HeaderTop__List {
-    color: var(--color-primary-2) !important;
-    padding-top: 20px !important; }
-    .HeaderTop__List:hover {
-      color: white !important;
-      background-color: #e5b721;
-      height: 100%;
-      width: 100%; }
-  .HeaderTop__ContactUs {
-    color: var(--color-primary-2) !important;
-    margin-right: 20px;
-    padding-top: 20px !important;
-    padding-bottom: 20px !important; }
-    .HeaderTop__ContactUs:hover {
-      color: white !important;
-      background-color: #e5b721;
-      height: 100%; }
+    align-items: center;
+    margin: 0rem;
+    padding: 0rem; }
 
 .ButtonTopUP {
   height: 40px;
@@ -84,7 +60,7 @@
   font-weight: 600;
   line-height: 21px;
   text-align: center;
-  margin-right: 20px !important; }
+  margin-right: 20px; }
   .ButtonTopUP__label {
     font-size: 18px; }
     .ButtonTopUP__label__italic {
@@ -96,7 +72,7 @@
     border: transparent;
     outline-color: none; } }
 
-.ButtonLogin {
+.ButtonLoginSignup {
   height: 40px;
   border-radius: 10px;
   background-color: #FFCD05;
@@ -108,16 +84,12 @@
   font-weight: 800;
   letter-spacing: 1px;
   margin: 10px; }
-  .ButtonLogin__iconLogin {
+  .ButtonLoginSignup__iconLogin {
     width: 17px;
     height: 25px; }
-  .ButtonLogin__iconProfile {
-    width: 15.219px !important;
-    height: 25px !important; }
-  .ButtonLogin__Profile {
-    padding-top: 20px; }
-  .ButtonLogin__P {
-    padding-top: 20px; }
+  .ButtonLoginSignup__iconProfile {
+    width: 15px;
+    height: 25px; }
 
 @media (max-width: 767px) {
   .ButtonLogin {
@@ -129,35 +101,6 @@
   .ButtonLogin__iconLogin {
     width: 0px;
     height: 0px; } }
-
-.ButtonSignup {
-  height: 40px;
-  border-radius: 10px;
-  background-color: #FFCD05;
-  display: flex;
-  align-items: center;
-  color: #3E3E3E;
-  font-family: Raleway;
-  font-size: 22px;
-  font-weight: 800;
-  letter-spacing: 1px;
-  margin: 10px; }
-  .ButtonSignup__iconLogin {
-    width: 17px;
-    height: 25px; }
-  .ButtonSignup__P {
-    padding-top: 20px; }
-
-@media (max-width: 767px) {
-  .ButtonSignup__iconLogin {
-    width: 0px;
-    height: 0px; } }
-
-@media (max-width: 767px) {
-  .ButtonSignup {
-    background-color: transparent;
-    color: var(--color-yellow-1);
-    margin-left: 60px; } }
 
 .ButtonProfile {
   height: 40px;
@@ -176,12 +119,8 @@
     width: 17px;
     height: 25px; }
   .ButtonProfile__iconProfile {
-    width: 15.219px !important;
-    height: 25px !important; }
-  .ButtonProfile__Profile {
-    padding-top: 20px; }
-  .ButtonProfile__P {
-    padding-top: 20px; }
+    width: 15.219px;
+    height: 25px; }
 
 @media (max-width: 767px) {
   .ButtonLogin {
@@ -194,7 +133,7 @@
     width: 0px;
     height: 0px; } }
 
-.navbartogel {
+.IconBurger {
   background-color: var(--color-yellow-1); }
 
 .Bar-First {
@@ -475,6 +414,9 @@
     padding-left: 2rem;
     margin: 0rem !important; }
 
+.rowz {
+  margin: 0rem !important; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -587,14 +529,17 @@ body {
   background-color: var(--color-grey-5); }
 
 .Modalz {
-  width: 750px;
   margin-top: 10%;
   border-radius: 0;
   border: 5px solid var(--white); }
 
-@media (min-width: 576px) {
+@media (min-width: 275px) and (max-width: 500px) {
   .Modalz {
-    max-width: none; } }
+    margin-top: 20%;
+    font-size: 14px;
+    margin-left: 43px;
+    width: 80%;
+    max-width: 100%; } }
 
 .inputz {
   border: transparent;
