--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,41 +1,96 @@
 .footerz {
-  background-color: var(--color-grey-7);
-  grid-column: full-start / full-end;
-  padding: 5rem; }
+  display: flex;
+  flex-direction: column;
+  background: var(--color-dark-3); }
+  .footerz__Top {
+    display: flex;
+    justify-content: center;
+    height: 400px; }
+    .footerz__Top__Left {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+      .footerz__Top__Left__box {
+        display: flex;
+        flex-direction: column;
+        color: var(--color-yellow-1);
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        margin: 2rem;
+        padding: 2rem; }
+      .footerz__Top__Left__label {
+        margin: 2rem; }
+      .footerz__Top__Left__button {
+        margin: 2rem;
+        background-color: var(--color-yellow-1);
+        color: var(--color-dark-3); }
+    .footerz__Top__Right {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      color: var(--color-yellow-1); }
+      .footerz__Top__Right__devide {
+        display: flex;
+        flex-direction: row; }
+      .footerz__Top__Right__Row1 {
+        width: 33.3%;
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        margin: 2rem; }
+        .footerz__Top__Right__Row1__list {
+          margin-top: 2rem;
+          margin-bottom: 2rem;
+          font-size: 18px;
+          font-weight: 300;
+          line-height: 21px; }
+      .footerz__Top__Right__Row2 {
+        width: 33.3%;
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        margin: 2rem; }
+        .footerz__Top__Right__Row2__list {
+          margin-top: 2rem;
+          margin-bottom: 2rem;
+          font-size: 18px;
+          font-weight: 300;
+          line-height: 21px; }
+      .footerz__Top__Right__Row3 {
+        width: 33.3%;
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        margin: 2rem; }
+  .footerz__Bot {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    background-color: var(--color-yellow-1); }
 
-.navfooter {
-  list-style: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  grid-gap: 2rem;
-  align-items: center; }
+.LogoFooter {
+  width: 250px;
+  height: 70px;
+  margin: 2rem; }
 
-.linkfooter:link, .linkfooter:visited {
-  font-size: 1.4rem;
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-  text-align: center;
-  padding: .25rem;
-  display: block;
-  transition: all .2s; }
+.LogoSosmed {
+  width: 25px;
+  height: 25px; }
 
-.linkfooter:hover, .linkfooter:active {
-  background-color: var(--color-yellow-4);
-  color: var(--color-grey-7);
-  transform: translateY(-3px); }
+.FooterzKosong {
+  width: 100%;
+  height: 100px; }
 
-.SocialMedia {
-  color: var(--color-primary-1);
-  text-align: center; }
-
-.footerz2 {
-  font-size: 1.4rem;
-  color: var(--color-grey-7);
-  background-color: var(--color-yellow-1);
-  text-align: center;
-  padding: 0rem !important;
-  height: 30px; }
+ul {
+  list-style-type: none; }
 
 .HeaderTop {
   background-color: #3E3E3E;
