--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -1,46 +1,128 @@
 .footerz {
-    background-color: var(--color-grey-7);
-    grid-column: full-start / full-end;
-    padding: 5rem;
-}
+  display: flex;
+  flex-direction: column;
+  background: var(--color-dark-3);
 
-.navfooter {
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-    grid-gap: 2rem;
+  &__Top{
+    display: flex;
+    justify-content: center;
+    height: 400px;
+
+    &__Left{
+      width: 50%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      &__box{
+        display: flex;
+        flex-direction: column;
+        color: var(--color-yellow-1);
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        margin: 2rem;
+        padding: 2rem;
+      }
+
+      &__label{
+        margin: 2rem;
+      }
+
+      &__button{
+        margin: 2rem;
+        background-color: var(--color-yellow-1);
+        color: var(--color-dark-3);
+      }
+    }
+
+    &__Right{
+      width: 50%;
+
+      display: flex;
+      flex-direction: column;
+
+      color: var(--color-yellow-1);
+
+      &__devide{
+        display: flex;
+        flex-direction: row;
+      }
+
+      &__Row1{
+        width: 33.3%;
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        margin: 2rem;
+        &__list{
+          margin-top: 2rem;
+          margin-bottom: 2rem;
+
+          font-size: 18px;
+          font-weight: 300;
+          line-height: 21px;
+        }
+      }
+
+      &__Row2{
+        width: 33.3%;
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        margin: 2rem;
+        &__list{
+          margin-top: 2rem;
+          margin-bottom: 2rem;
+
+          font-size: 18px;
+          font-weight: 300;
+          line-height: 21px;
+        }
+      }
+
+      &__Row3{
+        width: 33.3%;
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        margin: 2rem;
+      }
+    }
+
+  }
+
+  &__Bot{
+    display: flex;
+    justify-content: center;
     align-items: center;
-}
-
-.linkfooter{
-  &:link,
-  &:visited {
-      font-size: 1.4rem;
-      color: #fff;
-      text-decoration: none;
-      text-transform: uppercase;
-      text-align: center;
-      padding: .25rem;
-      display: block;
-      transition: all .2s;
-  }
-
-  &:hover,
-  &:active {
-    background-color: var(--color-yellow-4);
-    color: var(--color-grey-7);
-    transform: translateY(-3px);
-  }
-}
-.SocialMedia{
-  color: var(--color-primary-1);
-  text-align: center;
-}
-.footerz2 {
-    font-size: 1.4rem;
-    color: var(--color-grey-7);
+    height: 150px;
     background-color: var(--color-yellow-1);
-    text-align: center;
-    padding: 0rem !important;
-    height: 30px;
+  }
+}
+
+
+.LogoFooter{
+  width: 250px;
+  height: 70px;
+  margin: 2rem;
+}
+
+.LogoSosmed{
+  width: 25px;
+  height: 25px;
+}
+
+.FooterzKosong{
+  width: 100%;
+  height: 100px;
+}
+ul {
+  list-style-type: none;
 }
