--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -8,7 +8,7 @@
 @import "pages/login";
 @import "pages/aboutus";
 @import "pages/howitworks";
-
+@import "pages/bidding";
 @import "pages/product";
 @import "pages/home";
 
