--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -8,36 +8,37 @@
 //for page home component TabsHome
 .NavTabsHome{
   background-color: var(--color-dark-3);
-  color: var(--color-yellow-1) !important;
-  margin: 0rem !important;
-}
-.TabsHome{
-  width: 25% !important;
-  height: 5rem !important;
-  text-align: center !important;
-  margin: 0rem !important;
-  font-family: Raleway;
+  color: var(--color-yellow-1);
   font-size: 20px;
+  cursor: default;
+}
+@media (min-width: 275px ) and (max-width:500px ) {
+  .NavTabsHome{
+    font-size: 14px;
+  }
+}
+
+.TabsHome{
+  width: 25%;
+  // height: 5rem ; ntar diurusin
+  margin: 0;
+  font-family: Raleway;
   font-weight: 900;
   letter-spacing: 1px;
   line-height: 11px;
   text-align: center;
-
-  &__link{
-    height: 100%;
-    border: 1px solid #979797 !important;
+  border: 1px solid #979797 ;
 
     &:hover{
-      color: black !important;
+      color: black ;
       background-color: var(--color-yellow-1);
     }
-  }
 
   &__icon1{
     height: 40px;
     width: 20px;
     &:hover{
-      color: var(--color-yellow-1) !important;
+      color: var(--color-yellow-1);
       background-color: var(--color-yellow-1);
     }
   }
@@ -49,12 +50,12 @@
     padding: 2rem;
     background-color: var;
     &:hover{
-      color: black !important;
+      color: black ;
       background-color: white;
     }
     &__text{
-      font-size: 5rem !important;
-      text-align: center !important;
+      font-size: 5rem ;
+      text-align: center ;
       margin: 0rem;
     }
 
@@ -66,7 +67,7 @@
       display: flex;
       justify-content: space-around;
       padding-top: 1.5rem;
-      margin-bottom: 5rem !important;
+      margin-bottom: 5rem ;
 
       &__content{
         flex: 1 1 200px;
@@ -74,10 +75,10 @@
     }
 
     &__button{
-      color: var(--color-yellow-1) !important;
-      background-color: #3e3e3e !important;
+      color: var(--color-yellow-1) ;
+      background-color: #3e3e3e ;
       font-family: Raleway;
-      font-size: 24px!important;
+      font-size: 24px;
       font-weight: 800;
       letter-spacing: 1px;
       line-height: 29px;
@@ -89,10 +90,10 @@
 
 // for component dropdown at TabsPane1
     .dropz{
-      width: 10rem !important;
-      height: 5rem !important;
+      width: 10rem ;
+      height: 5rem ;
       &:hover{
-        color: black !important;
+        color: black ;
         background-color: var(--color-primary-2);
       }
       &__img{
@@ -100,11 +101,11 @@
         height: 3rem;
       }
       &__item{
-        min-width: 0rem !important;
-        width: 8rem !important;
-        text-align: center !important;
+        min-width: 0rem ;
+        width: 8rem ;
+        text-align: center ;
         &:hover{
-          color: black !important;
+          color: black ;
           background-color: var(--color-primary-2);
         }
       }
@@ -114,27 +115,25 @@
 
 // for page home component banner text kok bisa lebih murah
 .BannerText1{
-  border-top: 0.25rem solid var(--color-yellow-1) !important;
-  height: 25rem;
+  border-top: 0.25rem solid var(--color-yellow-1);
   width: 100%;
-  margin: 0rem !important;
   background-color: var(--color-grey-7);
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  padding-bottom: 20px;
 
   &__text1{
     font-size: 4rem;
     padding: 2rem;
-    margin: 0rem !important;
+    margin: 0;
     color: var(--color-yellow-1);
     text-align: center;
   }
   &__text2{
     padding: 2rem;
-    margin: 0rem !important;
-    margin: 0rem !important;
+    margin: 0;
     font-size: 1.5rem;
     color: var(--color-grey-6);
   }
@@ -142,26 +141,27 @@
 
 // for page home component banner text FAQ
 .BannerText2{
-  height: 25rem;
   width: 100%;
-  margin: 0rem !important;
+  margin: 0;
   background-color: var(--color-grey-6);
   color: var(--color-grey-dark-1);
   text-align: center;
+  padding-bottom: 20px;
 
   &__text1{
     font-size: 4rem;
     padding: 2rem;
-    margin: 0rem !important;
+    margin: 0;
   }
   &__text2{
     font-size: 1.5rem;
     padding-right: 2rem;
     padding-left: 2rem;
-    margin: 0rem !important;
+    margin: 0;
   }
 }
 
 .rowz {
-  margin: 0rem !important;
+  margin: 0;
 }
+
