--- a/public/sass/pages/_landingpage.scss
+++ b/public/sass/pages/_landingpage.scss
@@ -1,21 +1,21 @@
 //isi bar pertama dari bawah navbar
 .Bar-First {
-  margin: 0rem !important;
-  padding: 0rem !important;
+  margin: 0rem ;
+  padding: 0rem ;
   &__col1{
-    // gak bisa di timpa jadi di kasih !important
-    padding: 0rem !important;
+    // gak bisa di timpa jadi di kasih 
+    padding: 0rem ;
   }
   &__col2{
-    // gak bisa di timpa jadi di kasih !important
-    padding: 0rem !important;
-    position: relative !important;
+    // gak bisa di timpa jadi di kasih 
+    padding: 0rem ;
+    position: relative ;
   }
   &__banner {
     // form barimages
     width: 100%;
     //float left
-    float: left !important;
+    float: left ;
     // img fluid
     max-width: 100%;
     height: auto;
