--- a/public/sass/pages/_bidding.scss
+++ b/public/sass/pages/_bidding.scss
@@ -2,10 +2,13 @@
   background-color: var(--color-grey-5);
   display: flex;
   justify-content: center;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-top: 5%;
+  border-bottom: 10px solid yellow;
 
   &__container{
-    width: 800px;
-    padding: 50px;
+    width: 100%;
     background-color: var(--color-grey-5);
     display: flex;
     flex-direction: column;
@@ -47,8 +50,6 @@
       }
 
       &__coret{
-        height: 26px;
-        width: 106px;
         color: #FFFFFF;
         font-family: Raleway;
         font-size: 22px;
@@ -58,8 +59,6 @@
       }
 
       &__newPrice{
-      	height: 49px;
-      	width: 201px;
       	color: #FFCD05;
       	font-family: Raleway;
       	font-size: 42px;
@@ -68,8 +67,6 @@
       }
 
       &__live{
-        height: 24px;
-        width: 106px;
         color: #FFCD05;
         font-family: Raleway;
         font-size: 20px;
@@ -78,8 +75,6 @@
       }
 
       &__text {
-      	height: 48px;
-      	width: 229px;
       	color: #FFFFFF;
       	font-family: Raleway;
       	font-size: 14px;
