--- a/public/sass/reusable/_variables.scss
+++ b/public/sass/reusable/_variables.scss
@@ -1,4 +1,10 @@
 :root {
+  $desktop: "(min-width: 1024px)";
+  $desktop2: "(min-width: 1024px)";
+  $tablet: "(min-width: 1024px)";
+  $BigPhone: "(min-width: 1024px)";
+  $SmallPhone: "(min-width: 1024px)";
+
 
     --color-yellow-1: #FFCD05;
     --color-yellow-2: #FEC40C;
