--- a/public/css/style.css
+++ b/public/css/style.css
@@ -431,7 +431,8 @@ svg {
     width: 100%;
     background-color: var(--color-grey-5);
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    flex-wrap: wrap; }
   .bidding__1 {
     width: 100%;
     padding-bottom: 30px; }
@@ -446,11 +447,13 @@ svg {
   .bidding__2 {
     width: 100%;
     display: flex;
-    padding-botto: 30px; }
+    padding-bottom: 30px; }
     .bidding__2__col1 {
       width: 50%; }
     .bidding__2__col2 {
       width: 50%; }
+      .bidding__2__col2__mid {
+        text-align: center; }
       .bidding__2__col2__pulsa {
         color: #FFFFFF;
         font-family: Raleway;
@@ -463,7 +466,8 @@ svg {
         font-size: 22px;
         font-weight: 900;
         line-height: 26px;
-        text-decoration: line-through; }
+        text-decoration: line-through;
+        text-align: center; }
       .bidding__2__col2__newPrice {
         color: #FFCD05;
         font-family: Raleway;
@@ -493,7 +497,8 @@ svg {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 10px; }
+      padding: 10px;
+      text-align: center; }
       .bidding__3__col__text {
         color: #FFFFFF;
         font-family: Raleway;
@@ -548,6 +553,15 @@ svg {
       font-weight: bold;
       line-height: 21px; }
 
+@media (min-width: 275px) and (max-width: 500px) {
+  .bidding__2__col1 {
+    width: 300px !important;
+    background-color: var(--blue); } }
+
+@media (min-width: 275px) and (max-width: 500px) {
+  .bidding__3__col {
+    font-size: 20px; } }
+
 .product {
   background-color: var(--color-primary-3); }
 
@@ -586,7 +600,6 @@ svg {
 
 .TabsPane1 {
   margin: 0rem;
-  padding: 2rem;
   background-color: var; }
   .TabsPane1:hover {
     color: black;
@@ -596,28 +609,41 @@ svg {
     text-align: center;
     margin: 0rem; }
   .TabsPane1__label {
-    margin: 0rem; }
+    font-family: Raleway;
+    font-size: 36px;
+    font-weight: 800;
+    letter-spacing: 1px;
+    line-height: 42px;
+    text-align: center; }
   .TabsPane1__dropdown {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     padding-top: 1.5rem;
     margin-bottom: 5rem; }
     .TabsPane1__dropdown__content {
       flex: 1 1 200px; }
+  .TabsPane1__selectedProduct {
+    text-align: center;
+    padding: 20px;
+    color: var(--color-grey-5); }
   .TabsPane1__button {
     color: var(--color-yellow-1);
-    background-color: #3e3e3e;
+    background-color: var(--color-grey-5);
+    width: 100%;
+    padding: 20px;
     font-family: Raleway;
     font-size: 24px;
     font-weight: 800;
     letter-spacing: 1px;
-    line-height: 29px;
     text-align: center;
     margin: 0rem; }
 
 .dropz {
-  width: 10rem;
-  height: 5rem; }
+  width: 12rem;
+  height: 5rem;
+  background-color: var(--color-grey-5);
+  margin-bottom: 10px; }
   .dropz:hover {
     color: black;
     background-color: var(--color-primary-2); }
@@ -626,8 +652,9 @@ svg {
     height: 3rem; }
   .dropz__item {
     min-width: 0rem;
-    width: 8rem;
-    text-align: center; }
+    width: 12rem;
+    text-align: center;
+    background-color: var(--blue); }
     .dropz__item:hover {
       color: black;
       background-color: var(--color-primary-2); }
@@ -685,9 +712,6 @@ svg {
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
-  @media only screen and (max-width: 68.75em) {
-    html {
-      font-size: 50%; } }
 
 body {
   font-family: 'Open Sans', sans-serif;
