--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,7 +62,7 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        margin: 2rem; }
+        margin-top: 2rem; }
         .footerz__Top__Right__Row3__logo {
           padding-top: 20px; }
   .footerz__Bot {
@@ -658,22 +658,37 @@ svg {
 .dropz {
   width: 12rem;
   height: 5rem;
-  background-color: var(--color-grey-5);
-  margin-bottom: 10px; }
+  padding: 0rem;
+  display: flex;
+  align-items: center;
+  background-color: var(--color-grey-5); }
+  .dropz__big {
+    margin: 0rem;
+    padding: 0rem;
+    width: 75%;
+    height: 100%; }
+  .dropz__small {
+    margin: 0rem;
+    padding: 0rem;
+    width: 25%;
+    height: 100%;
+    justify-content: center; }
   .dropz:hover {
     color: black;
     background-color: var(--color-primary-2); }
   .dropz__img {
     width: 6rem;
     height: 3rem; }
+  .dropz__icon {
+    width: 1rem;
+    height: 1rem; }
   .dropz__item {
-    min-width: 0rem;
-    width: 12rem;
+    width: 100%;
     text-align: center;
-    background-color: var(--blue); }
-    .dropz__item:hover {
-      color: black;
-      background-color: var(--color-primary-2); }
+    margin: 0rem;
+    padding: 1rem;
+    color: var(--color-yellow-1);
+    background-color: var(--color-grey-5); }
 
 .BannerText1 {
   border-top: 0.25rem solid var(--color-yellow-1);
