--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -85,7 +85,7 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        margin: 2rem;
+        margin-top: 2rem;
 
         &__logo{
           padding-top: 20px;
