--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -106,10 +106,29 @@
 
 // for component dropdown at TabsPane1
     .dropz{
-      width: 12rem ;
-      height: 5rem ;
+      width: 12rem;
+      height: 5rem;
+      padding: 0rem;
+      display: flex;
+      align-items: center;
       background-color: var(--color-grey-5);
-      margin-bottom: 10px;
+
+      &__big{
+        margin: 0rem;
+        padding: 0rem;
+
+        width: 75%;
+        height: 100%;
+      }
+
+      &__small{
+        margin: 0rem;
+        padding: 0rem;
+
+        width: 25%;
+        height: 100%;
+        justify-content: center;
+      }
 
       &:hover{
         color: black ;
@@ -121,16 +140,26 @@
         height: 3rem;
       }
 
-      &__item{
-        min-width: 0rem ;
-        width: 12rem ;
-        text-align: center ;
-        background-color: var(--blue);
+      &__icon{
+        width: 1rem;
+        height: 1rem;
+      }
 
-        &:hover{
-          color: black ;
-          background-color: var(--color-primary-2);
-        }
+      &__item{
+        width: 100%;
+        text-align: center;
+
+        margin: 0rem;
+        padding: 1rem;
+
+        color: var(--color-yellow-1);
+        background-color: var(--color-grey-5);
+
+
+        // &:hover{
+        //   color: var(--color-grey-5);
+        //   background-color: var(--color-yellow-1);
+        // }
       }
 
     }
