--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -39,7 +39,7 @@
     &__Right{
       display: flex;
       align-items: center;
-
+      margin-right: 2rem;
       color: var(--color-yellow-1);
 
       &__devide{
@@ -53,6 +53,8 @@
         font-weight: bold;
         line-height: 21px;
         margin: 2rem;
+
+
         &__list{
           margin-top: 2rem;
           margin-bottom: 2rem;
@@ -69,6 +71,8 @@
         font-weight: bold;
         line-height: 21px;
         margin: 2rem;
+
+
         &__list{
           margin-top: 2rem;
           margin-bottom: 2rem;
@@ -86,8 +90,12 @@
         line-height: 21px;
         margin: 2rem;
 
+
+
         &__logo{
           padding-top: 20px;
+          display: flex;
+          justify-content: space-between;
         }
       }
     }
@@ -117,7 +125,7 @@
     }
   }
 }
-  @media (min-width: 200px ) and (max-width:400px ) {
+  @media (min-width: 200px ) and (max-width:396px ) {
   .footerz__Top__Right__devide{
     display: block;
   }
