--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -63,7 +63,7 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        margin: 2rem; }
+        margin-top: 2rem; }
         .footerz__Top__Right__Row3__logo {
           padding-top: 20px;
           display: flex;
@@ -618,7 +618,6 @@ svg {
 
 .TabsPane1 {
   margin: 0rem;
-  padding: 2rem;
   background-color: var; }
   .TabsPane1:hover {
     color: black;
@@ -628,43 +627,89 @@ svg {
     text-align: center;
     margin: 0rem; }
   .TabsPane1__label {
-    margin: 0rem; }
+    font-family: Raleway;
+    font-size: 36px;
+    font-weight: 800;
+    letter-spacing: 1px;
+    line-height: 42px;
+    text-align: center; }
   .TabsPane1__dropdown {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    flex-wrap: wrap;
     padding-top: 1.5rem;
     margin-bottom: 5rem; }
     .TabsPane1__dropdown__content {
       flex: 1 1 200px; }
+  .TabsPane1__selectedProduct {
+    text-align: center;
+    padding: 20px;
+    color: var(--color-grey-5); }
   .TabsPane1__button {
     color: var(--color-yellow-1);
-    background-color: #3e3e3e;
+    background-color: var(--color-grey-5);
+    width: 100%;
+    padding: 20px;
     font-family: Raleway;
     font-size: 24px;
     font-weight: 800;
     letter-spacing: 1px;
-    line-height: 29px;
     text-align: center;
     margin: 0rem; }
 
 .dropz {
   width: 12rem;
   height: 5rem;
-  margin-bottom: 10px; }
+  padding: 0rem;
+  border: 3px solid #3E3E3E; }
+  .dropz__devide {
+    width: 100%;
+    height: 100%;
+    margin: 0rem;
+    padding: 0rem;
+    border: none;
+    display: flex; }
+  .dropz__big {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--white);
+    width: 75%;
+    height: 100%;
+    margin: 0rem;
+    padding: 0rem; }
+  .dropz__small {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-grey-5);
+    width: 25%;
+    height: 100%;
+    justify-content: center;
+    margin: 0rem;
+    padding: 0rem; }
   .dropz:hover {
     color: black;
     background-color: var(--color-primary-2); }
   .dropz__img {
     width: 6rem;
     height: 3rem; }
+  .dropz__icon {
+    width: 1rem;
+    height: 1rem; }
   .dropz__item {
-    min-width: 0rem;
-    width: 8rem;
-    text-align: center; }
-    .dropz__item:hover {
-      color: black;
-      background-color: var(--color-primary-2); }
+    width: 100%;
+    text-align: center;
+    margin: 0rem;
+    padding: 0.5rem;
+    background-color: var(--color-grey-5); }
+    .dropz__item__inside {
+      padding: 0.5rem;
+      color: var(--color-yellow-1); }
+      .dropz__item__inside:hover {
+        background-color: var(--color-yellow-1);
+        color: var(--color-grey-5); }
 
 .BannerText1 {
   border-top: 0.25rem solid var(--color-yellow-1);
