--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -23,7 +23,7 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        padding: 2rem;
+        padding: 1rem;
       }
 
       &__label{
@@ -90,6 +90,8 @@
         font-weight: bold;
         line-height: 21px;
         margin-top: 2rem;
+        margin-left: 2rem;
+        margin-bottom: 2rem;
 
 
 
