--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        padding: 2rem; }
+        padding: 1rem; }
       .footerz__Top__Left__label {
         margin: 2rem; }
       .footerz__Top__Left__button {
@@ -63,7 +63,9 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        margin-top: 2rem; }
+        margin-top: 2rem;
+        margin-left: 2rem;
+        margin-bottom: 2rem; }
         .footerz__Top__Right__Row3__logo {
           padding-top: 20px;
           display: flex;
@@ -88,7 +90,7 @@
       font-weight: 800;
       line-height: 16px; }
 
-@media (min-width: 200px) and (max-width: 396px) {
+@media (min-width: 100px) and (max-width: 396px) {
   .footerz__Top__Right__devide {
     display: block; } }
 
@@ -662,7 +664,8 @@ svg {
   width: 12rem;
   height: 5rem;
   padding: 0rem;
-  border: 3px solid #3E3E3E; }
+  border: 3px solid #3E3E3E;
+  margin-bottom: 10px; }
   .dropz__devide {
     width: 100%;
     height: 100%;
