--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -110,7 +110,7 @@
       height: 5rem;
       padding: 0rem;
       border: 3px solid #3E3E3E;
-
+      margin-bottom: 10px;
       &__devide{
         width: 100%;
         height: 100%;
